--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,6 @@ asgiref==3.8.1
 cloudinary==1.41.0
 Django==5.1.2
 django-cloudinary-storage==0.3.0
+djangorestframework==3.15.2
 pillow==11.0.0
 sqlparse==0.5.1
